--- a/infrastructure.yml
+++ b/infrastructure.yml
@@ -49,7 +49,7 @@ Resources:
       SecurityGroups:
       - !Ref UdacityCapstoneSecurityGroup
       ImageId: ami-0e342d72b12109f91
-      InstanceType: t2.micro
+      InstanceType: t2.medium
       # Enter the name of your Key-Pair here:
       KeyName: UdacityCapstoneKeyPair
 Outputs:
