--- a/infrastructure/infrastructure.yml
+++ b/infrastructure/infrastructure.yml
@@ -5,31 +5,10 @@ Parameters:
     Description: A name for the container repository in AWS' ECR.
     Type: String
   UdacityCapstoneDeveloperIP:
-    Description: IP of the Cloud DevOps Engnieer in CIDR-Notation
+    Description: IP of the Cloud DevOps Engineer in CIDR-Notation
     Type: String
     Default: 02.006.004.116/32
 Resources:
-  UdacityCapstoneElasticContainerRepository:
-    Type: AWS::ECR::Repository
-    Properties:
-      RepositoryName: !Ref RepositoryName
-      RepositoryPolicyText:
-        Version: "2012-10-17"
-        Statement:
-          -
-            Sid: AllowPushPull
-            Effect: Allow
-            Principal:
-              AWS:
-                - "arn:aws:iam::793553224113:user/UdacityCapstoneDeveloper"
-            Action:
-              - "ecr:GetDownloadUrlForLayer"
-              - "ecr:BatchGetImage"
-              - "ecr:BatchCheckLayerAvailability"
-              - "ecr:PutImage"
-              - "ecr:InitiateLayerUpload"
-              - "ecr:UploadLayerPart"
-              - "ecr:CompleteLayerUpload"
   UdacityCapstoneSecurityGroup:
     Type: AWS::EC2::SecurityGroup
     Properties:
@@ -43,7 +22,7 @@ Resources:
         FromPort: 22
         ToPort: 22
         CidrIp: !Ref UdacityCapstoneDeveloperIP
-  UdacityCapstoneServer4Jenkins:
+  UdacityCapstoneServer:
     Type: AWS::EC2::Instance
     Properties:
       SecurityGroups:
@@ -55,6 +34,6 @@ Resources:
 Outputs:
   UdacityCapstoneJenkinsServerURL:
     Description: The URL where you can access Jenkins (after it is setup!)
-    Value: !Join [ "", [ "http://", !GetAtt UdacityCapstoneServer4Jenkins.PublicDnsName, ":8080" ] ]
+    Value: !Join [ "", [ "http://", !GetAtt UdacityCapstoneServer.PublicDnsName, ":8080" ] ]
     Export:
-      Name: UdacityCapstoneJenkinsServerURL
+      Name: UdacityCapstoneServerURL
