--- a/infrastructure/infrastructure.yml
+++ b/infrastructure/infrastructure.yml
@@ -28,7 +28,7 @@ Resources:
       SecurityGroups:
       - !Ref UdacityCapstoneSecurityGroup
       ImageId: ami-0e342d72b12109f91
-      InstanceType: t2.medium
+      InstanceType: c3.large
       # Enter the name of your Key-Pair here:
       KeyName: UdacityCapstoneKeyPair
 Outputs:
