--- a/loadbalancer_for_test.yaml
+++ b/loadbalancer_for_test.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: predictor-service
+  name: test-loadbalancer
 spec:
   type: LoadBalancer
   selector:
